# aiutilx

./: Cargo.toml  LICENSE  README.md  install.ps1  install.sh
dnsx/: Cargo.toml
dnsx/src/: main.rs
gitx/: Cargo.toml
gitx/src/: main.rs
tests/: Cargo.toml  dnsx_test.rs  gitx_test.rs
